syntax = "proto3";

package orders;

import "google/api/annotations.proto";

service Orders {
    rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse) {
        option (google.api.http)  = {get: "/v1/orders"};
    };
    rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse) {
        option (google.api.http) = {post: "/v1/orders"};
    };
}

message GetUserOrdersRequest{
    int64 userid = 1;
}
message GetUserOrdersResponse{
    repeated Order orders = 1;
}

message Order {
    int64 id = 1;
    int64 userid = 2;
    string product = 3;
    float total = 4;
}

message PlaceOrderRequest {
    int64 userid = 1;
    string product = 2;
    float total = 3;
}
message PlaceOrderResponse {
    enum Status {
        SUCCESS = 0;
        FAIL = 1;
    }
    Status status = 1;
}
